dfir_rs/tests/compile-fail/surface_join_persistence_extra.stderr
error: `join` should have at least 0 and at most 2 persistence lifetime arguments, actually has 3.
 --> tests/compile-fail/surface_join_persistence_extra.rs:5:20
  |
5 |         j = join::<'static, 'static, 'static>() -> for_each(std::mem::drop);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^
